# KE-142_C_Labs

./: CMakeLists.txt  a.out  lab_2  lab_3  lab_4  lab_6  main  main.cpp
Lab1/: lab1  lab_1.cpp
Lab2/: lab_2.cpp
Lab3/: lab_3.cpp
Lab4/: lab_4.cpp
Lab5/: examples_lab_5.cpp  lab_5.cpp
Lab6/: examples_lab_6.cpp  lab_6.cpp
Lab7/: examples_lab_7.cpp  lab_7.cpp
Lab8/: DataHandler.cpp  DataHandler.h  DataProcessors.cpp  DataProcessors.h  examples_lab+_8.cpp  lab_8.cpp  miniFunctions.cpp  miniFunctions.h
Lab8/files/: 0int.txt  1int.txt  2int.txt  3int.txt  double_1.txt  double_2.txt  double_3.txt  double_4.txt  double_5.txt  int_1.txt  int_2.txt  int_3.txt  int_4.txt  int_5.txt  string_1.txt  string_2.txt  string_3.txt  string_4.txt  string_5.txt
