cmake_minimum_required(VERSION 3.30)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        Lab1/lab_1.cpp
        Lab2/lab_2.cpp
        Lab3/lab_3.cpp
        Lab4/lab_4.cpp
        Lab5/lab_5.cpp
        Lab6/lab_6.cpp
        Lab7/lab_7.cpp
        Lab8/lab_8.cpp
        Lab9/lab_9.cpp
        Lab10/lab_10.cpp)
